--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%">
 <head>
   <meta charset="utf-8">
   <title>Your Money</title>
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="./assets/images/icon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body style="height: 100%">
   <app-root></app-root>
 </body>
 </html>
